--- a/symfony/templates/main/codeReview.html.twig
+++ b/symfony/templates/main/codeReview.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
-
+{% set icon_color = '1c2045' %}
 {% block head %}
-    <link id="favicon" rel="shortcut icon" type="image/png" href="{{ path('app_utility_favicon') }}?bg=1c2045"/>
+    <link id="favicon" rel="shortcut icon" type="image/png" href="{{ path('app_utility_favicon') }}?bg={{ icon_color }}"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.6.0/dt-1.11.5/datatables.min.css" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" crossorigin="anonymous"/>
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.6.0/dt-1.11.5/datatables.min.js" crossorigin="anonymous"></script>
@@ -85,6 +85,7 @@
             } else {
                 return true;
             }
+            if(issue['assigned_to']['id'] === REDMINE_USER_ID) return true;
             count = count + 1;
             issue_table.row.add($([
                 '<tr class="' + custom_row_class + '">',
@@ -99,7 +100,7 @@
             issue_table.columns.adjust().draw();
         });
         updateTitle(count);
-        $('#favicon').attr('href', '{{ path('app_utility_favicon') }}?bg=1c2045&number[]=' + count);
+        $('#favicon').attr('href', '{{ path('app_utility_favicon') }}?bg={{ icon_color }}&number[]=' + count);
         setTimeout(pullIssues, 90 * 1000);
     });
 
