--- a/symfony/templates/main/new.html.twig
+++ b/symfony/templates/main/new.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% set icon_color = 'bfac00' %}
+{% set icon_color = '520202' %}
 {% block head %}
     <link id="favicon" rel="shortcut icon" type="image/png" href="{{ path('app_utility_favicon') }}?bg={{ icon_color }}"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.6.0/dt-1.11.5/datatables.min.css" crossorigin="anonymous"/>
