--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -23,7 +23,8 @@
             <a class="btn btn-primary{% if path('app_main_index') == currentPath %} disabled{% endif %}" href="{{ path('app_main_index') }}">Time</a>
             <a class="btn btn-secondary{% if path('app_main_tasks') == currentPath %} disabled{% endif %}" href="{{ path('app_main_tasks') }}" id="taskMonitor">Open Tasks</a>
             <a class="btn btn-secondary{% if path('app_main_new') == currentPath %} disabled{% endif %}" href="{{ path('app_main_new') }}" id="newMonitor">New Issues</a>
-            <a class="btn btn-secondary{% if path('app_main_codeReview') == currentPath %} disabled{% endif %}" href="{{ path('app_main_codeReview') }}" id="tasksMonitor">Code Review</a>
+            <a class="btn btn-secondary{% if path('app_main_codeReview') == currentPath %} disabled{% endif %}" href="{{ path('app_main_codeReview') }}" id="codeReview">Code Review</a>
+            <a class="btn btn-secondary{% if path('app_main_releaseHold') == currentPath %} disabled{% endif %}" href="{{ path('app_main_releaseHold') }}" id="releaseHold">Release Hold</a>
         </div>
     </div>
 {{ block('body') }}
@@ -72,7 +73,7 @@
                     }
                     return true;
                 });
-                $("#tasksMonitor").text('Code Review (' + cr_count + ')');
+                $("#codeReview").text('Code Review (' + cr_count + ')');
                 setTimeout(monitorTasksUpdate, 90 * 1000);
             }
         });
@@ -127,6 +128,7 @@
                     r_count += 1;
                     return true;
                 });
+                $("#releaseHold").text('Release Hold (' + r_count + ')');
             }
         });
     }
