--- a/symfony/templates/main/releaseHold.html.twig
+++ b/symfony/templates/main/releaseHold.html.twig
@@ -38,7 +38,7 @@
 {% endblock %}
 
 {% block javascript %}
-
+<script type="text/javascript">
     let REDMINE_URL = '{{ redmine_url }}';
     let REDMINE_USER_ID = {{ redmine_user_id }};
 
@@ -94,4 +94,5 @@
     });
 
 }
+</script>
 {% endblock %}
