--- a/symfony/templates/main/approved.html.twig
+++ b/symfony/templates/main/approved.html.twig
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.6.0/dt-1.11.5/datatables.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js" crossorigin="anonymous"></script>{% endblock %}
 
-{% block title %}New Issue Queue{% endblock %}
+{% block title %}Approved Queue{% endblock %}
 {% block body %}
     <div class="container">
         <div class="row">
@@ -39,6 +39,7 @@
 {% endblock %}
 
 {% block javascript %}
+<script type="text/javascript">
     let REDMINE_URL = '{{ redmine_url }}';
 
     $(document).ready(function() {
@@ -64,7 +65,10 @@
         async: true,
         method: "GET",
         url: REDMINE_API_URL + "/issues.json",
-        data: { 'status_id': "1" },
+        data: {
+                'status_id': 10,
+                'limit': 100
+            },
         crossDomain: true,
         dataType: 'json',
     }).done(function(data){
@@ -101,4 +105,5 @@
         let date = dateObject.toLocaleDateString().split('/');
         return date[0].padStart(2,'0') + '/' + date[1].padStart(2,'0') + ' ' + time[0].padStart(2,'0') + ':' + time[1] + ampm;
     }
+</script>
 {% endblock %}
