--- a/symfony/templates/main/approved.html.twig
+++ b/symfony/templates/main/approved.html.twig
@@ -66,7 +66,7 @@
         method: "GET",
         url: REDMINE_API_URL + "/issues.json",
         data: {
-                'status_id': 10,
+                'status_id': REDMINE_STATUS['STATUS_APPROVED'],
                 'limit': 100
             },
         crossDomain: true,
