--- a/symfony/templates/main/codeReview.html.twig
+++ b/symfony/templates/main/codeReview.html.twig
@@ -59,7 +59,7 @@
         async: true,
         method: "GET",
         url: REDMINE_API_URL + "/issues.json",
-        data: { 'status_id': "9" },
+        data: { 'status_id': REDMINE_STATUS['STATUS_CODE_REVIEW'] },
         crossDomain: true,
         dataType: 'json',
     }).done(function(data){
