--- a/symfony/templates/main/tasks.html.twig
+++ b/symfony/templates/main/tasks.html.twig
@@ -72,7 +72,7 @@
         async: true,
         method: "GET",
         url: REDMINE_API_URL + "/issues.json",
-        data: { 'status_id': 2, 'limit': 100 },
+        data: { 'status_id': REDMINE_STATUS['STATUS_ASSIGNED'], 'limit': 100 },
         crossDomain: true,
         dataType: 'json',
     }).done(function(data){
