--- a/symfony/templates/main/tasks.html.twig
+++ b/symfony/templates/main/tasks.html.twig
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <table id="issues" class="table table-bordered table-striped">
+                <table id="issues" class="table table-bordered table-striped" style="width: 100%;">
                     <thead>
                     <tr>
                         <th>epoch</th>
