--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -32,6 +32,7 @@
             <a class="btn btn-secondary{% if path('app_main_releaseHold') == currentPath %} disabled{% endif %}" href="{{ path('app_main_releaseHold') }}" id="releaseHold">Release Hold</a>
         </div>
     </div>
+    {% include('partial/flash.html.twig') %}
 {{ block('body') }}
 </body>
 <script type="text/javascript">
